fix(snackbar): adjust spacing to level 5

--- a/packages/components/src/components/notice/bal-snackbar/bal-snackbar.scss
+++ b/packages/components/src/components/notice/bal-snackbar/bal-snackbar.scss
@@ -12,7 +12,6 @@ bal-snackbar {
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12), 0 0 6px rgba(0, 0, 0, 0.04);
     border-radius: $radius-large;
     background: $white;
-    padding: 32px;
     pointer-events: auto;
     max-width: 320px;
     flex-grow: 1;
